--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,5 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html"><h1>Cindi Mayweather</h1></a>
+<div class="container">
+<nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="index.html"><h1>Jillian Nguyen</h1></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -29,4 +30,4 @@
             </ul>
         </div>
     </nav>
-    
+</div>
