--- a/layouts/projects/single.html
+++ b/layouts/projects/single.html
@@ -4,11 +4,12 @@
     {{ partial "head.html" . }}
     {{/*  imports "head.html" from the partials/ folder in layouts/  */}}
     {{/*  the second argument is the context for variables in "head.html" and using "." means use the same variable namespace as this document  */}}
+    <link href="https://fonts.googleapis.com/css?family=Caveat:700|Lato:400,400i,700,700i&display=swap" rel="stylesheet">
 </head>
 <body>
     {{ partial "navbar.html" (dict "context" . "originPage" "project") }}
     <div class="container">
-        <h1>{{ .Title }}</h1>
+        <h1 class="project-title">{{ .Title }}</h1>
         
         {{/*  Each project has either a project image or a project video  */}}
         {{/*  The code below checks if there's a project video, and if so checks the type  */}}
