--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -6,17 +6,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-            <li class="nav-item {{ if eq .originPage `home` }} active {{ end }}">
-            {{/*  active means this is the current page  */}}
-            {{/*  using ` quotes around "home" because I'm already inside of a quote  */}}
-                <a class="nav-link" href="/index.html">Portfolio
-                    {{ if eq .originPage `home` }} 
-                        <span class="sr-only">(current)</span>
-                    {{ end }}
-                </a>
-                {{/*  sr-only means that it will only display "(current)" if the person is uing a screenreader  */}}
-                {{/*  /index.html means the path is based on the root folder rather than based on the path relative to the folder in which this HTML file is  */}}
-            </li>
+            <!--ABOUT ME-->
             <li class="nav-item {{ if eq .originPage `aboutMe` }} active {{ end }}">
                 <a class="nav-link" href="/about-me/">About Me
                     {{ if eq .originPage `aboutMe` }} 
@@ -24,6 +14,27 @@
                     {{ end }}
                 </a>
             </li>
+            <!--EDITING-->
+            <li class="nav-item {{ if eq .originPage `home` }} active {{ end }}">
+                    <a class="nav-link" href="editing.html">Editing
+                        {{ if eq .originPage `home` }} 
+                            <span class="sr-only">(current)</span>
+                        {{ end }}
+                    </a>
+            </li>
+            <!--PORTFOLIO [index.html aka directing default]-->
+            <li class="nav-item {{ if eq .originPage `home` }} active {{ end }}">
+                {{/*  active means this is the current page  */}}
+                {{/*  using ` quotes around "home" because I'm already inside of a quote  */}}
+                    <a class="nav-link" href="/index.html">Directing
+                        {{ if eq .originPage `home` }} 
+                            <span class="sr-only">(current)</span>
+                        {{ end }}
+                    </a>
+                    {{/*  sr-only means that it will only display "(current)" if the person is uing a screenreader  */}}
+                    {{/*  /index.html means the path is based on the root folder rather than based on the path relative to the folder in which this HTML file is  */}}
+            </li>
+            <!--CONTACT-->
             <li class="nav-item">
                 <a class="nav-link" href="#">Contact</a>
             </li>
