--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,6 +1,6 @@
 <div class="container">
 <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="index.html"><h1>Jillian Nguyen</h1></a>
+        <a class="navbar-brand" href="index.html"><h1 class="nav-name">Jillian Nguyen</h1></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
