--- a/assets/style.css
+++ b/assets/style.css
@@ -48,14 +48,17 @@ p {
 
 .pp-gallery {
     margin-top: 20px;
+    padding: 10px; 
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 }
   
 .pp-gallery-item {
-    height: 220px;
-    width: 170px;
     object-fit: contain;
+    padding-right: 15px;
   }
 
+  .pp-gallery-item2 {
+    object-fit: contain;
+  }
