--- a/layouts/projects/single.html
+++ b/layouts/projects/single.html
@@ -21,9 +21,9 @@
                 <div class="embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/{{ .Params.projectVideo  }}?modestbranding=0&showinfo=0&rel=0" frameborder="0" allow="encrypted-media; picture-in-picture; fullscreen" allowfullscreen></iframe>    
                 </div>
-                {{ else if eq .Params.projectVideoType "vimeo" }}
+                {{ else if eq .Params.projectVideoType "gdrive" }}
                     <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/{{ .Params.projectVideo  }}?title=0&byline=0&portrait=0"  frameborder="0" allow="encrypted-media; picture-in-picture; fullscreen" allowfullscreen></iframe>
+                        <iframe class="embed-responsive-item" src="https://drive.google.com/file/d/{{ .Params.projectVideo}}/preview" frameborder="0" allow="encrypted-media; picture-in-picture; fullscreen" allowfullscreen></iframe>
                     </div>
                 {{ else if eq .Params.projectVideoType "" }}
                     <p>projectVideoType not entered!!! </p>
