--- a/layouts/partials/card-layout.html
+++ b/layouts/partials/card-layout.html
@@ -15,8 +15,8 @@
                     <a href="{{ .RelPermalink }}"></a>
                         <img src="{{ $imgThumb.RelPermalink }}" alt="...">
                     </a>
-                        <h5 class="card-title">{{ .Title }}</h5>
-                        <p class="card-text">{{ .Params.shortDescription }}</p>
+                        <h5>{{ .Title }}</h5>
+                        <p><c>{{ .Params.shortDescription }}</c></p>
                 </figure>
             </div>
 
