More project pages

--- a/layouts/partials/card-layout.html
+++ b/layouts/partials/card-layout.html
@@ -16,7 +16,7 @@
                         <img src="{{ $imgThumb.RelPermalink }}" alt="...">
                     </a>
                         <h5>{{ .Title }}</h5>
-                        <p><c>{{ .Params.shortDescription }}</c></p>
+                        <p>{{ .Params.shortDescription }}</p>
                 </figure>
             </div>
 
