--- a/assets/bootstrap/bootstrap.css
+++ b/assets/bootstrap/bootstrap.css
@@ -4647,7 +4647,7 @@ input[type="button"].btn-block {
 }
 
 .card-img-overlay {
-  position: absolute;
+  position: center;
   top: 0;
   right: 0;
   bottom: 0;
@@ -4656,8 +4656,11 @@ input[type="button"].btn-block {
 }
 
 .card-img {
-  width: 100%;
-  border-radius: calc(0.25rem - 1px);
+  width: 50%;
+  object-fit: contain;
+  padding-right: 15px;
+  padding-top: 15px;
+  /* border-radius: calc(0.25rem - 1px); */
 }
 
 .card-img-top {
