Added editing projects page

--- a/layouts/section/editing.html
+++ b/layouts/section/editing.html
@@ -1,7 +1,4 @@
 <!DOCTYPE html>
-
-{{/*This was copied from index.html. Nothing has been changed. index.html should be the Directing portfolio gallery, whereas this will be the gallery for Editing}}
-
 <html lang="en">
 <head>
     {{ partial "head.html" . }}
@@ -11,13 +8,18 @@
 
 </head>
 <body>
-    {{ partial "navbar.html" (dict "context" . "originPage" "home") }}
+    {{/*  CATEGORY PAGES: change "albums" to the name of your page  */}}
+    {{/*  CATEGORY PAGES: remember, all lowercase and "-" instead of spaces  */}}
+    {{ partial "navbar.html" (dict "context" . "originPage" "editing") }}
+
     {{/*  partial takes two parameters: first parameter is a string, the second is an object  */}}
     {{/*  in this case, the second argument is a dictionary object  */}}
     {{/*  dict creates a new dictionary with a set of key-value pairs. 
         As many as you want, but they must be paired "key value key value key value" */}}
-
-    {{ partial "card-layout.html" . }}
+    <div class="container">
+        {{ .Scratch.Set "elements" .Site.Data.project_order.editing }}
+        {{ partial "card-layout.html" . }}
+    </div>
 
 
     {{ partial "scripts.html" }}
