--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -24,13 +24,14 @@
                     </a>
                 </li>
                 <!--EDITING-->
-                <li class="nav-item {{ if eq .originPage `home` }} active {{ end }}">
+                <li class="nav-item {{ if eq .originPage `editing` }} active {{ end }}">
                         <a class="nav-link m-2 menu-item nav-active" href="editing.html">Editing
-                            {{ if eq .originPage `home` }} 
+                            {{ if eq .originPage `editing` }} 
                                 <span class="sr-only">(current)</span>
                             {{ end }}
                         </a>
                 </li>
+
                 <!--PORTFOLIO [index.html aka directing default]-->
                 <li class="nav-item {{ if eq .originPage `home` }} active {{ end }}">
                     {{/*  active means this is the current page  */}}
