--- a/layouts/section/editing.html
+++ b/layouts/section/editing.html
@@ -5,24 +5,35 @@
     {{/*  imports "head.html" from the partials/ folder in layouts/  */}}
     {{/*  the second argument is the context for variables in "head.html" and using "." 
     means use the same variable namespace as this document  */}}
-
 </head>
 <body>
-    {{/*  CATEGORY PAGES: change "albums" to the name of your page  */}}
-    {{/*  CATEGORY PAGES: remember, all lowercase and "-" instead of spaces  */}}
-    {{ partial "navbar.html" (dict "context" . "originPage" "editing") }}
-
+    {{ partial "navbar.html" (dict "context" . "originPage" "home") }}
     {{/*  partial takes two parameters: first parameter is a string, the second is an object  */}}
     {{/*  in this case, the second argument is a dictionary object  */}}
     {{/*  dict creates a new dictionary with a set of key-value pairs. 
         As many as you want, but they must be paired "key value key value key value" */}}
 
-    <div class="container">
-        {{ .Scratch.Set "elements" .Site.Data.project_order.editing }}
+
+    {{ .Scratch.Set "elements" .Site.Data.project_order.content }}
+
+    {{/*  NORMAL CARD LAYOUT: begins here  */}}
         {{ partial "card-layout.html" . }}
-    </div>
+    {{/*  NORMAL CARD LAYOUT: ends here  */}}
 
 
+    
+    {{/*  CATEGORY LAYOUT: starts here  */}}
+          <div class="container">
+            <h2>Directing</h2>
+            {{ .Scratch.Set "elements" .Site.Data.project_order.directing }}
+            {{ partial "card-layout.html" . }}
+
+            <h2>Editing</h2>
+            {{ .Scratch.Set "elements" .Site.Data.project_order.editing }}
+            {{ partial "card-layout.html" . }}
+        </div>  
+    {{/*  CATEGORY LAYOUT: ends here  */}}
+    
     {{ partial "scripts.html" }}
 </body>
 </html>
