--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -25,7 +25,7 @@
                 </li>
                 <!--EDITING-->
                 <li class="nav-item {{ if eq .originPage `editing` }} active {{ end }}">
-                        <a class="nav-link m-2 menu-item nav-active" href="editing.html">Editing
+                        <a class="nav-link m-2 menu-item nav-active" href="editing/">Editing
                             {{ if eq .originPage `editing` }} 
                                 <span class="sr-only">(current)</span>
                             {{ end }}
