--- a/layouts/section/editing.html
+++ b/layouts/section/editing.html
@@ -7,32 +7,21 @@
     means use the same variable namespace as this document  */}}
 </head>
 <body>
-    {{ partial "navbar.html" (dict "context" . "originPage" "home") }}
+    {{ partial "navbar.html" (dict "context" . "originPage" "editing") }}
     {{/*  partial takes two parameters: first parameter is a string, the second is an object  */}}
     {{/*  in this case, the second argument is a dictionary object  */}}
     {{/*  dict creates a new dictionary with a set of key-value pairs. 
         As many as you want, but they must be paired "key value key value key value" */}}
 
 
-    {{ .Scratch.Set "elements" .Site.Data.project_order.content }}
+    {{ .Scratch.Set "elements" .Site.Data.project_order.editing }}
 
     {{/*  NORMAL CARD LAYOUT: begins here  */}}
         {{ partial "card-layout.html" . }}
     {{/*  NORMAL CARD LAYOUT: ends here  */}}
 
 
-    
-    {{/*  CATEGORY LAYOUT: starts here  */}}
-          <div class="container">
-            <h2>Directing</h2>
-            {{ .Scratch.Set "elements" .Site.Data.project_order.directing }}
-            {{ partial "card-layout.html" . }}
 
-            <h2>Editing</h2>
-            {{ .Scratch.Set "elements" .Site.Data.project_order.editing }}
-            {{ partial "card-layout.html" . }}
-        </div>  
-    {{/*  CATEGORY LAYOUT: ends here  */}}
     
     {{ partial "scripts.html" }}
 </body>
