--- a/assets/style.css
+++ b/assets/style.css
@@ -63,3 +63,13 @@ p {
   .pp-gallery-item2 {
     object-fit: contain;
   }
+
+.footer {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 1rem;
+    background-color: #efefef;
+    text-align: center;
+}
