--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -50,7 +50,8 @@
                 </li>
                 </ul>
             </div>
-        </nav>
+        </nav>        
     </div>
+</div>
     
 
