Finalized fonts & colors for all titles and nav bar
i am so powerful

--- a/layouts/partials/card-layout.html
+++ b/layouts/partials/card-layout.html
@@ -25,7 +25,7 @@
                 <img src="{{ $imgThumb.RelPermalink }}" class="card-img-top" alt="...">
                 <div class="card-body">
                     <a href="{{ .RelPermalink }}" class="stretched-link">
-                        <h5 class="card-title text-white">{{ .Title }}</h5>
+                        <h4 class="card-title proj-title">{{ .Title }}</h5>
                         <p class="card-text">{{ .Params.shortDescription }}</p>
                     </a> 
                 </div>
