--- a/assets/bootstrap/bootstrap.css
+++ b/assets/bootstrap/bootstrap.css
@@ -4463,23 +4463,26 @@ input[type="button"].btn-block {
   color: rgba(0, 0, 0, 0.9);
 }
 
+/* This one changes the nav title colors!! */
 .navbar-light .navbar-nav .nav-link {
-  color: rgba(0, 0, 0, 0.5);
+  color: white;
 }
 
+/* This one changes the hover colors!! */
 .navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link:focus {
-  color: rgba(0, 0, 0, 0.7);
+  color: #f3e2bc;
 }
 
 .navbar-light .navbar-nav .nav-link.disabled {
   color: rgba(0, 0, 0, 0.3);
 }
 
+/* This one changes active colors!! */
 .navbar-light .navbar-nav .show > .nav-link,
 .navbar-light .navbar-nav .active > .nav-link,
 .navbar-light .navbar-nav .nav-link.show,
 .navbar-light .navbar-nav .nav-link.active {
-  color: rgba(0, 0, 0, 0.9);
+  color: #f5d690;
 }
 
 .navbar-light .navbar-toggler {
@@ -4588,7 +4591,6 @@ input[type="button"].btn-block {
 
 .card-title {
   margin-bottom: 0.25rem;
-  text-shadow: 2px 2px 5px rgba(0, 0, 0, .2);
 }
 
 .card-subtitle {
