--- a/assets/style.css
+++ b/assets/style.css
@@ -30,14 +30,25 @@ h1.nav-name{
 
 h1.project-title {
     font-family: 'Caveat', cursive;
-    color: white;
+    color: #f5d690;
+    text-align: center;
+}
+
+h1.about-me-title {
+    font-family: 'Caveat', cursive;
+    color: #f5d690;
     text-align: center;
 }
 
 h2.section-title {
     font-family: 'Caveat', cursive;
-    color: white;
-    opacity: 0.8;
+    color: #f5d690;
+    text-align: center;
+}
+
+h4.proj-title {
+    font-family: 'Caveat', cursive;
+    color: #f5d690;
     text-align: center;
 }
 
