--- a/layouts/section/about-me.html
+++ b/layouts/section/about-me.html
@@ -4,7 +4,7 @@
     {{ partial "head.html" . }}
     {{/*  imports "head.html" from the partials/ folder in layouts/  */}}
     {{/*  the second argument is the context for variables in "head.html" and using "." means use the same variable namespace as this document  */}}
-
+    <link href="https://fonts.googleapis.com/css?family=Caveat:700|Lato:400,400i,700,700i&display=swap" rel="stylesheet">
 </head>
 <body>
     {{ partial "navbar.html" (dict "context" . "originPage" "aboutMe") }}
@@ -16,7 +16,7 @@
                 <img class="img-fluid" src="{{ $img.RelPermalink }}" />
             </div>
             <div class="col-6">
-                <h1>{{ .Params.title }}</h1>
+                <h1 class="about-me-title">{{ .Params.title }}</h1>
                 <p>{{ .Content }}</p>
             </div>
         </div>
